syntax = "proto3";

option csharp_namespace = "StereoMixLobby";

service Room {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  rpc EnterRoom(EnterRoomRequest) returns (EnterRoomResponse);
  rpc LeaveRoom(LeaveRoomRequest) returns (LeaveRoomResponse);
  rpc GetRoomList(GetRoomListRequest) returns (GetRoomListResponse);
}

message RoomInfo {
  string room_id = 1;
  string room_name = 2;
  bool is_public = 3;
  int32 user_count = 4;
}

message CreateRoomRequest {
  string room_name = 1;
  bool is_public = 2;
  string password = 3;
}

message CreateRoomResponse {
  enum RoomCreateResult {
    CREATED = 0;
    ALREADY_ENTERED = 1;
    INTERNAL_ERROR = 2;
  }
  RoomCreateResult result = 1;
  string room_id = 2;
}

message EnterRoomRequest {
  string room_id = 1;
  string password = 2;
}

message EnterRoomResponse {
  enum RoomEnterResult {
    ENTERED = 0;
    NOT_FOUND = 1;
    ALREADY_ENTERED = 2;
    WRONG_PASSWORD = 3;
    INTERNAL_ERROR = 4;
  }
  RoomEnterResult result = 1;
}

message LeaveRoomRequest {
  string room_id = 1;
}

message LeaveRoomResponse {
  enum RoomLeaveResult {
    LEFT = 0;
    NOT_FOUND = 1;
    INTERNAL_ERROR = 2;
  }
  RoomLeaveResult result = 1;
}

message GetRoomListRequest {
}

message GetRoomListResponse {
  repeated RoomInfo room_list = 1;
}
